Fixing layout issues in workshop

--- a/src/app/workshop/workshop-edit/workshop-edit.component.scss
+++ b/src/app/workshop/workshop-edit/workshop-edit.component.scss
@@ -66,3 +66,8 @@ textarea{
 color: black;
 cursor: pointer;
 }
+
+.content-container {
+  padding: 0px 15px;
+  margin: auto 0px;
+}
